src-tauri/build_errors.log
warning: unused import: `protox::prost::Message`
 --> src\blueprotobuf-lib\build.rs:1:5
  |
1 | use protox::prost::Message;
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `blueprotobuf-lib` (build script) generated 1 warning
   Compiling resonance-logs v0.1.0 (C:\Users\Deus\Documents\Projects\resonance-logs\src-tauri)
src\database\models.rs:363:3: error: cannot find attribute `diesel` in this scope
src\live\attempt_detector.rs:7:35: warning: unused imports: `AttrType` and `Entity`
src\live\commands_models.rs:1:5: warning: unused import: `crate::WINDOW_LIVE_LABEL`
src\live\commands_models.rs:2:5: warning: unused import: `tauri::Manager`
src\live\commands_models.rs:3:5: warning: unused import: `window_vibrancy::apply_blur`
src\live\live_main.rs:1:5: warning: unused import: `crate::live::event_manager::MetricType`
src\packets\utils.rs:1:28: warning: unused import: `LittleEndian`
src\database\commands.rs:481:9: warning: unused import: `std::collections::HashSet`
src\database\commands.rs:1912:8: warning: unnecessary parentheses around `if` condition
src\database\schema.rs:4:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\schema.rs:38:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\schema.rs:60:1: warning: unused doc comment
src\database\schema.rs:144:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\schema.rs:178:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\schema.rs:208:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\schema.rs:226:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\schema.rs:248:1: warning: unused doc comment: rustdoc does not generate documentation for macro invocations
src\database\commands.rs:1165:44: error[E0277]: the trait bound `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...): CompatibleType<..., _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1165:44: error[E0277]: the trait bound `DamageSkillStatRow: FromSqlRow<_, _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1202:44: error[E0277]: the trait bound `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...): CompatibleType<..., _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1202:44: error[E0277]: the trait bound `DamageSkillStatRow: FromSqlRow<_, _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1343:44: error[E0277]: the trait bound `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...): CompatibleType<..., _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1343:44: error[E0277]: the trait bound `DamageSkillStatRow: FromSqlRow<_, _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1916:44: error[E0277]: the trait bound `(..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ..., ...): CompatibleType<..., _>` is not satisfied: unsatisfied trait bound
src\database\commands.rs:1916:44: error[E0277]: the trait bound `DamageSkillStatRow: FromSqlRow<_, _>` is not satisfied: unsatisfied trait bound
src\lib.rs:9:5: warning: unused import: `std::os::windows::process::CommandExt`
src\build_app.rs:13:53: warning: unused variable: `api`
src\live\opcodes_process.rs:443:13: warning: unused variable: `local_player_uid_copy`: help: if this is intentional, prefix it with an underscore: `_local_player_uid_copy`
src\database\mod.rs:599:13: warning: unused variable: `timestamp_ms`: help: try ignoring the field: `timestamp_ms: _`
src\database\mod.rs:611:13: warning: unused variable: `attempt_index`: help: try ignoring the field: `attempt_index: _`
src\database\mod.rs:700:13: warning: unused variable: `timestamp_ms`: help: try ignoring the field: `timestamp_ms: _`
src\database\mod.rs:707:13: warning: unused variable: `attempt_index`: help: try ignoring the field: `attempt_index: _`
src\lib.rs:275:9: warning: variable does not need to be mutable
warning: `resonance-logs` (lib) generated 24 warnings
error: could not compile `resonance-logs` (lib) due to 9 previous errors; 24 warnings emitted
